# QHO426

./: .gitignore  AE2 test.py  README.md  main.py  process.py  products.json  pyproject.toml  student.csv  students.csv  tasteofmusic.csv  token.txt  tui.py  visual.py
basics/decisions/: nestception.py
basics/decisions/simple_decisions/: counter.py
basics/functions/: funcition_parameters.py  function_with_loop.py  functioncalls.py
basics/input/: data_types.py  string_operators.py  user_input.py
basics/modules/: guess_the_number.py
basics/output/: escape_character.py  multiline_message.py  simple_message.py
basics/repetitions/: count_down.py  while_loop.py
data/lists/: movement.py  populate_list.py  simple_list.py
data/tuples/: nested_tuples.py
demos/: calculator.py  w2_for.py  w2_happy.py  w2_if.py  w2_multi.py  w2_nested.py  w2_while.py  w2_while2.py  w3_ASCII.py  w3_builtin.py  w3_def.py  w3_import.py  w3_menu.py  w3_rooms.py  w4_avengers.py  w4_average_mrk.py  w4_index_list.py  w4_list_demo.py  w4_tuple.py  w5_dictionary.py  w5_phonebook.py  w5_shop.py  w5_tinder.py  w6_csv.py  w6_jason.py  w6_pattern.py  w6_tasteofmusic.py  w6_txt.py
