[tool.poetry]
name = "repl_python3_QHO426"
version = "0.1.0"
description = ""
authors = ["pestioliver <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
triangle = "^20220202"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
